@@ -28,7 +28,7 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.osgi.test.internal.util.IOUtils;
 
 /**
- * Knopflerfish 2.0.x Platform.
+ * Knopflerfish 2.0.4+ Platform.
  * 
  * @author Costin Leau
  */
@@ -40,19 +40,19 @@ public class KnopflerfishPlatform extends AbstractOsgiPlatform {
 
 	private File kfStorageDir;
 
-	private static final String ROOT = "/org/springframework/osgi/test/platform/";
-
-	private static final String PKGS_1_4 = ROOT + "kf.packages1.4.txt";
-
-	private static final String PKGS_1_5 = ROOT + "kf.packages1.5.txt";
-
 
 	public KnopflerfishPlatform() {
 		toString = "Knopflerfish OSGi Platform";
 	}
 
 	protected Properties getPlatformProperties() {
-		kfStorageDir = createTempDir("kf");
+		if (kfStorageDir == null) {
+			kfStorageDir = createTempDir("kf");
+			kfStorageDir.deleteOnExit();
+			if (log.isDebugEnabled())
+				log.debug("KF temporary storage dir is " + kfStorageDir.getAbsolutePath());
+
+		}
 
 		// default properties
 		Properties props = new Properties();
@@ -66,37 +66,10 @@ public class KnopflerfishPlatform extends AbstractOsgiPlatform {
 		props.setProperty("org.knopflerfish.framework.exitonshutdown", "false");
 		// disable patch CL
 		props.setProperty("org.knopflerfish.framework.patch", "false");
+		// new in KF 2.0.4 - automatically exports system packages based on the JRE version
+		props.setProperty("org.knopflerfish.framework.system.export.all", "true");
 
-		// load system packages
-		props.setProperty(Constants.FRAMEWORK_SYSTEMPACKAGES, loadSystemPackages());
 		return props;
-	}
-
-	protected String loadSystemPackages() {
-		Properties pckgs = new Properties();
-		String pckgFile = PKGS_1_4;
-
-		if (JdkVersion.isAtLeastJava15())
-			pckgFile = PKGS_1_5;
-
-		try {
-			pckgs.load(new ClassPathResource(pckgFile).getInputStream());
-		}
-		catch (Exception ex) {
-			log.warn("cannot load system packages", ex);
-		}
-		StringBuffer bf = new StringBuffer();
-
-		for (Iterator iterator = pckgs.keySet().iterator(); iterator.hasNext();) {
-			bf.append(iterator.next());
-
-			if (iterator.hasNext())
-				bf.append(",");
-		}
-
-		if (log.isTraceEnabled())
-			log.trace("loaded system properties [" + bf + "]");
-		return bf.toString();
 	}
 
 	public BundleContext getBundleContext() {
